force-app/main/default/objects/NoTouch_API_log__c/NoTouch_API_log__c.object-meta.xml
<CustomObject>
    <label>NoTouch API log</label>
    <nameField>
        <displayFormat>NoTouch API log-{000000}</displayFormat>
        <label>NoTouch API log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NoTouch API log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>