force-app/main/default/objects/NoTouch_API_log__c/fields/Additional_Account__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NoTouch API log (Additional Account)</relationshipLabel>
    <relationshipName>NoTouch_API_log1</relationshipName>
    <type>Lookup</type>
</CustomField>