force-app/main/default/objects/NoTouch_API_log__c/fields/Additional_Account_Arr__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Arr__c</fullName>
    <label>Additional Account ARR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>