force-app/main/default/objects/NoTouch_API_log__c/fields/Additional_Account_Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Base_Product__c</fullName>
    <label>Additional Account Base Product</label>
    <length>88</length>
    <type>Text</type>
</CustomField>