force-app/main/default/objects/NoTouch_API_log__c/fields/Additional_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Country__c</fullName>
    <label>Additional Account Country</label>
    <length>126</length>
    <type>Text</type>
</CustomField>