force-app/main/default/objects/NoTouch_API_log__c/fields/Additional_Account_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_OwnerName__c</fullName>
    <label>Additional Account OwnerName</label>
    <length>125</length>
    <type>Text</type>
</CustomField>