force-app/main/default/objects/NoTouch_API_log__c/fields/Additional_Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Stage__c</fullName>
    <label>Additional Account Stage</label>
    <length>68</length>
    <type>Text</type>
</CustomField>