force-app/main/default/objects/NoTouch_API_log__c/fields/Additional_Account_Strategic_Pod__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_Strategic_Pod__c</fullName>
    <label>Additional Account Strategic Pod</label>
    <length>88</length>
    <type>Text</type>
</CustomField>