force-app/main/default/objects/NoTouch_API_log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NoTouch API log</relationshipLabel>
    <relationshipName>NoTouch_API_log</relationshipName>
    <type>Lookup</type>
</CustomField>