force-app/main/default/objects/NoTouch_API_log__c/fields/Execution_Log__c.field-meta.xml
<CustomField>
    <fullName>Execution_Log__c</fullName>
    <label>Execution Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>