force-app/main/default/objects/NoTouch_API_log__c/fields/hasException__c.field-meta.xml
<CustomField>
    <fullName>hasException__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasException</label>
    <type>Checkbox</type>
</CustomField>