force-app/main/default/objects/NoTouch_API_log__c/fields/jsonResponse__c.field-meta.xml
<CustomField>
    <fullName>jsonResponse__c</fullName>
    <label>jsonResponse</label>
    <type>TextArea</type>
</CustomField>