force-app/main/default/objects/NoTouch_API_log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>NoTouch API log</relationshipLabel>
    <relationshipName>NoTouch_API_log</relationshipName>
    <type>Lookup</type>
</CustomField>