force-app/main/default/objects/NoTouch_API_log__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <label>Matched Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>