force-app/main/default/objects/NoTouch_API_log__c/fields/Matched_Account_Arr__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Arr__c</fullName>
    <label>Matched Account ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>