force-app/main/default/objects/NoTouch_API_log__c/fields/Matched_Account_Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Base_Product__c</fullName>
    <label>Matched Account Base Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>