force-app/main/default/objects/NoTouch_API_log__c/fields/Matched_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Country__c</fullName>
    <label>Matched Account Country</label>
    <length>126</length>
    <type>Text</type>
</CustomField>