force-app/main/default/objects/NoTouch_API_log__c/fields/Matched_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NoTouch API log</relationshipLabel>
    <relationshipName>NoTouch_API_log</relationshipName>
    <type>Lookup</type>
</CustomField>