force-app/main/default/objects/NoTouch_API_log__c/fields/Matched_Account_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_OwnerName__c</fullName>
    <label>Matched Account OwnerName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>