force-app/main/default/objects/NoTouch_API_log__c/fields/Matched_Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Stage__c</fullName>
    <label>Matched Account Stage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>