force-app/main/default/objects/NoTouch_API_log__c/fields/MaxEmployees__c.field-meta.xml
<CustomField>
    <fullName>MaxEmployees__c</fullName>
    <label>MaxEmployees</label>
    <length>20</length>
    <type>Text</type>
</CustomField>