force-app/main/default/objects/NoTouch_API_log__c/fields/minEmployees__c.field-meta.xml
<CustomField>
    <fullName>minEmployees__c</fullName>
    <label>minEmployees</label>
    <length>20</length>
    <type>Text</type>
</CustomField>