force-app/main/default/objects/NoTouch_API_log__c/fields/NT_Subscription_FirstCharge_Date__c.field-meta.xml
<CustomField>
    <fullName>NT_Subscription_FirstCharge_Date__c</fullName>
    <label>NT Subscription FirstCharge Date</label>
    <type>Date</type>
</CustomField>