force-app/main/default/objects/NoTouch_API_log__c/fields/Request_Paramets__c.field-meta.xml
<CustomField>
    <fullName>Request_Paramets__c</fullName>
    <label>Request Paramets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>