force-app/main/default/objects/NoTouch_API_log__c/fields/Responce__c.field-meta.xml
<CustomField>
    <fullName>Responce__c</fullName>
    <label>Response</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>