force-app/main/default/objects/NoTouch_API_log__c/fields/websiteDomain__c.field-meta.xml
<CustomField>
    <fullName>websiteDomain__c</fullName>
    <label>websiteDomain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>