force-app/main/default/objects/NoTouch_API_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>hasException__c</columns>
    <columns>Responce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>