force-app/main/default/objects/NoTouch_API_log__c/listViews/Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Created_This_Week</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>hasException__c</columns>
    <columns>Responce__c</columns>
    <columns>NT_Subscription_FirstCharge_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Created This Week</label>
</ListView>