force-app/main/default/objects/NoTouch_API_log__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scenario__c</columns>
    <columns>Email__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>hasException__c</columns>
    <columns>Responce__c</columns>
    <columns>Request_Paramets__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>