force-app/main/default/objects/NoTouch_API_log__c/listViews/Exceptions_this_week.listView-meta.xml
<ListView>
    <fullName>Exceptions_this_week</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Scenario__c</columns>
    <columns>Email__c</columns>
    <columns>Contact__c</columns>
    <columns>hasException__c</columns>
    <columns>Responce__c</columns>
    <columns>Request_Paramets__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>hasException__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Exceptions this week</label>
</ListView>